--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -692,16 +692,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=SearchBarModIcon.svg&amp;filetimestamp=20211018191554&amp;.html" class="mw-file-description"><img src="../File/SearchBarModIcon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span>
 </td>
 <td><a href="../SearchBar_Mod.html" title="SearchBar Mod">SearchBar</a>
 </td>
-<td>Customization
+<td>P&#345;izp&#367;soben&iacute;
 </td>
-<td>It is an extension that adds a search bar next to the <a href="../Std_WhatsThis.html" title="Std WhatsThis">what's this?</a> tool. The search results include tools, objects and preferences. Other mods can extend it by registering a result provider.
+<td>Jedn&aacute; se o roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; p&#345;id&aacute;v&aacute; vyhled&aacute;vac&iacute; li&scaron;tu vedle n&aacute;stroje <a href="../Std_WhatsThis.html" title="Std WhatsThis">co je to?</a>. V&yacute;sledky vyhled&aacute;v&aacute;n&iacute; zahrnuj&iacute; n&aacute;stroje, objekty a p&#345;edvolby. Ostatn&iacute; mody ho mohou roz&scaron;&iacute;&#345;it registrac&iacute; poskytovatele v&yacute;sledk&#367;.
 </td>
 <td><a href="../User;Suzanne.soy.html" title="User:Suzanne.soy">Suzanne Soy</a>, APEbbers
 </td>
@@ -710,7 +709,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2284,13 +2282,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119225105
+Cached time: 20260119225157
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.387 seconds
-Real time usage: 0.525 seconds
-Preprocessor visited node count: 607/1000000
+CPU time usage: 0.347 seconds
+Real time usage: 0.501 seconds
+Preprocessor visited node count: 606/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2300,17 +2298,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.895      1 -total
- 32.54%    5.497      1 Template:Userdocnavi/cs
- 15.18%    2.564      2 Template:Docnav
- 15.12%    2.554      1 Template:Version
- 14.81%    2.502      1 Template:Navigation_menu_2
- 11.41%    1.928      1 Template:TOCright
- 10.18%    1.720      1 Template:KEY
-  9.74%    1.646      2 Template:FileName
+100.00%   15.305      1 -total
+ 40.13%    6.141      1 Template:Userdocnavi/cs
+ 16.30%    2.494      2 Template:Docnav
+ 12.44%    1.904      1 Template:Navigation_menu_2
+ 10.66%    1.632      1 Template:Version
+  9.55%    1.461      2 Template:FileName
+  9.49%    1.452      1 Template:KEY
+  9.27%    1.418      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119225105 and revision id 1741435. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119225157 and revision id 1741437. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
