--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -709,16 +709,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/triplus/SelectorToolbar">SelectorToolbar</a>
 </td>
-<td>Customization
+<td>P&#345;izp&#367;soben&iacute;
 </td>
-<td>It is a small extension that provides a point and click experience for switching workbenches.
+<td>Jedn&aacute; se o mal&eacute; roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; umo&#382;&#328;uje p&#345;ep&iacute;n&aacute;n&iacute; pracovn&iacute;ch ploch pomoc&iacute; my&scaron;i.
 </td>
 <td>triplus
 </td>
@@ -727,7 +726,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2282,13 +2280,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119225157
+Cached time: 20260119225233
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.347 seconds
-Real time usage: 0.501 seconds
-Preprocessor visited node count: 606/1000000
+CPU time usage: 0.378 seconds
+Real time usage: 0.634 seconds
+Preprocessor visited node count: 605/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2298,17 +2296,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.305      1 -total
- 40.13%    6.141      1 Template:Userdocnavi/cs
- 16.30%    2.494      2 Template:Docnav
- 12.44%    1.904      1 Template:Navigation_menu_2
- 10.66%    1.632      1 Template:Version
-  9.55%    1.461      2 Template:FileName
-  9.49%    1.452      1 Template:KEY
-  9.27%    1.418      1 Template:TOCright
+100.00%   20.738      1 -total
+ 37.83%    7.845      1 Template:Userdocnavi/cs
+ 15.74%    3.264      1 Template:Navigation_menu_2
+ 15.37%    3.187      2 Template:Docnav
+ 12.94%    2.683      1 Template:TOCright
+ 10.57%    2.192      1 Template:Version
+ 10.28%    2.132      2 Template:FileName
+  9.04%    1.875      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119225157 and revision id 1741437. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119225232 and revision id 1741439. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
