--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -743,16 +743,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/triplus/TabBar">TabBar</a>
 </td>
-<td>Customization
+<td>P&#345;izp&#367;soben&iacute;
 </td>
-<td>It is a small extension that adds a window with tabs in order to select workbenches.
+<td>Jedn&aacute; se o mal&eacute; roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; p&#345;id&aacute;v&aacute; okno s kartami pro v&yacute;b&#283;r pracovn&iacute;ch ploch.
 </td>
 <td>triplus
 </td>
@@ -761,7 +760,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2278,13 +2276,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119225311
+Cached time: 20260119225344
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.317 seconds
-Real time usage: 0.445 seconds
-Preprocessor visited node count: 604/1000000
+CPU time usage: 0.418 seconds
+Real time usage: 0.606 seconds
+Preprocessor visited node count: 603/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2294,17 +2292,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.894      1 -total
- 40.35%    4.396      1 Template:Userdocnavi/cs
- 20.96%    2.283      1 Template:Navigation_menu_2
- 17.35%    1.890      2 Template:Docnav
- 11.03%    1.202      1 Template:TOCright
-  8.93%    0.973      1 Template:Version
-  8.66%    0.944      1 Template:KEY
-  8.47%    0.923      2 Template:FileName
+100.00%   13.103      1 -total
+ 46.61%    6.107      1 Template:Userdocnavi/cs
+ 21.72%    2.846      1 Template:Navigation_menu_2
+ 15.70%    2.057      2 Template:Docnav
+  8.91%    1.167      1 Template:TOCright
+  8.79%    1.152      2 Template:FileName
+  8.43%    1.105      1 Template:KEY
+  7.40%    0.970      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119225311 and revision id 1741441. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119225343 and revision id 1741443. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
