--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -760,16 +760,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/triplus/ToolbarStyle">ToolbarStyle</a>
 </td>
-<td>Customization
+<td>P&#345;izp&#367;soben&iacute;
 </td>
-<td>It is a small extension that allows the configuration of toolbars, with icons, text, or both.
+<td>Jedn&aacute; se o mal&eacute; roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; umo&#382;&#328;uje konfiguraci panel&#367; n&aacute;stroj&#367; s ikonami, textem nebo oboj&iacute;m.
 </td>
 <td>triplus
 </td>
@@ -778,7 +777,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2276,13 +2274,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119225344
+Cached time: 20260119225418
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.418 seconds
-Real time usage: 0.606 seconds
-Preprocessor visited node count: 603/1000000
+CPU time usage: 0.425 seconds
+Real time usage: 0.917 seconds
+Preprocessor visited node count: 602/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2292,17 +2290,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.103      1 -total
- 46.61%    6.107      1 Template:Userdocnavi/cs
- 21.72%    2.846      1 Template:Navigation_menu_2
- 15.70%    2.057      2 Template:Docnav
-  8.91%    1.167      1 Template:TOCright
-  8.79%    1.152      2 Template:FileName
-  8.43%    1.105      1 Template:KEY
-  7.40%    0.970      1 Template:Version
+100.00%   13.779      1 -total
+ 38.73%    5.336      1 Template:Userdocnavi/cs
+ 22.89%    3.154      2 Template:Docnav
+ 15.43%    2.126      1 Template:Navigation_menu_2
+  9.72%    1.339      1 Template:Version
+  8.77%    1.209      1 Template:TOCright
+  8.19%    1.129      2 Template:FileName
+  7.50%    1.034      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119225343 and revision id 1741443. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119225417 and revision id 1741445. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
