--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -777,16 +777,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=WBO_icon.svg&amp;filetimestamp=20240129174138&amp;.html" class="mw-file-description"><img src="../File/WBO_icon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/Palmstroemen/WB_Organizer">WorkbenchOrganizer</a>
 </td>
-<td>Customization
+<td>P&#345;izp&#367;soben&iacute;
 </td>
-<td>Allows you to organize your workbenches in groups and to rename them for a better workflow <a rel="nofollow" class="external text" href="https://github.com/Palmstroemen/WB_Organizer/wiki">WorkbenchOrganizer</a>.
+<td>Umo&#382;&#328;uje organizovat pracovn&iacute; plochy do skupin a p&#345;ejmenov&aacute;vat je pro lep&scaron;&iacute; pracovn&iacute; postup <a rel="nofollow" class="external text" href="https://github.com/Palmstroemen/WB_Organizer/wiki">WorkbenchOrganizer</a>.
 </td>
 <td>Palmstroem
 </td>
@@ -795,7 +794,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2274,13 +2272,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119225418
+Cached time: 20260119225502
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.425 seconds
-Real time usage: 0.917 seconds
-Preprocessor visited node count: 602/1000000
+CPU time usage: 0.435 seconds
+Real time usage: 0.731 seconds
+Preprocessor visited node count: 601/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2290,17 +2288,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.779      1 -total
- 38.73%    5.336      1 Template:Userdocnavi/cs
- 22.89%    3.154      2 Template:Docnav
- 15.43%    2.126      1 Template:Navigation_menu_2
-  9.72%    1.339      1 Template:Version
-  8.77%    1.209      1 Template:TOCright
-  8.19%    1.129      2 Template:FileName
-  7.50%    1.034      1 Template:KEY
+100.00%   20.988      1 -total
+ 39.48%    8.286      1 Template:Userdocnavi/cs
+ 17.27%    3.624      2 Template:Docnav
+ 14.62%    3.069      1 Template:Navigation_menu_2
+ 10.50%    2.203      1 Template:Version
+ 10.37%    2.177      1 Template:TOCright
+  9.96%    2.091      1 Template:KEY
+  8.01%    1.682      2 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119225417 and revision id 1741445. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119225502 and revision id 1741447. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
