--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -828,16 +828,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=AirplaneWB_logo.svg&amp;filetimestamp=20181009183844&amp;.html" class="mw-file-description"><img src="../File/AirplaneWB_logo.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/FredsFactory/FreeCAD_AirPlaneDesign">AirPlaneDesign</a>
 </td>
-<td>Engineering
+<td>Stroj&iacute;renstv&iacute;
 </td>
-<td>It is an experimental workbench to design wings and airplane objects.
+<td>Jedn&aacute; se o experiment&aacute;ln&iacute; pracovn&iacute; plochu pro navrhov&aacute;n&iacute; k&#345;&iacute;del a leteck&yacute;ch objekt&#367;.
 </td>
 <td>FredsFactory (a179308)
 </td>
@@ -846,7 +845,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2268,13 +2266,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119225634
+Cached time: 20260119225722
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.407 seconds
-Real time usage: 0.617 seconds
-Preprocessor visited node count: 599/1000000
+CPU time usage: 0.433 seconds
+Real time usage: 0.602 seconds
+Preprocessor visited node count: 598/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2284,17 +2282,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.772      1 -total
- 45.67%    8.117      1 Template:Userdocnavi/cs
- 22.40%    3.981      1 Template:Navigation_menu_2
- 12.64%    2.246      2 Template:Docnav
- 11.68%    2.076      1 Template:KEY
- 10.15%    1.804      1 Template:Version
-  8.14%    1.447      2 Template:FileName
-  7.43%    1.320      1 Template:TOCright
+100.00%   14.284      1 -total
+ 35.92%    5.131      1 Template:Userdocnavi/cs
+ 15.97%    2.281      2 Template:Docnav
+ 14.78%    2.111      1 Template:Navigation_menu_2
+ 13.80%    1.971      1 Template:KEY
+ 11.67%    1.667      2 Template:FileName
+  9.79%    1.398      1 Template:Version
+  8.34%    1.192      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119225634 and revision id 1741451. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119225722 and revision id 1741453. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
