--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -845,16 +845,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=Beltrami_workbench_icon.svg&amp;filetimestamp=20211216093126&amp;.html" class="mw-file-description"><img src="../File/Beltrami_workbench_icon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="68" data-file-height="68"></a></span>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/Simturb/Beltrami">Beltrami</a>
 </td>
-<td>Engineering
+<td>Stroj&iacute;renstv&iacute;
 </td>
-<td>It designs turbomachine blades, rotor and stator. From the original profile provided by Beltrami or an existing one, modifications can be made to match your design specifications. It uses geometrical drivers compatible with fluid dynamics analysis. For turbines, pumps, compressors and fans.
+<td>Navrhuje lopatky turbostroj&#367;, rotory a statory. Na z&aacute;klad&#283; p&#367;vodn&iacute;ho profilu poskytnut&eacute;ho spole&#269;nost&iacute; Beltrami nebo existuj&iacute;c&iacute;ho profilu lze prov&eacute;st &uacute;pravy tak, aby odpov&iacute;daly va&scaron;im konstruk&#269;n&iacute;m specifikac&iacute;m. Pou&#382;&iacute;v&aacute; geometrick&eacute; ovlada&#269;e kompatibiln&iacute; s anal&yacute;zou dynamiky tekutin. Pro turb&iacute;ny, &#269;erpadla, kompresory a ventil&aacute;tory.
 </td>
 <td>SimTurb
 </td>
@@ -863,7 +862,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2266,13 +2264,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119225722
+Cached time: 20260120020126
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.433 seconds
-Real time usage: 0.602 seconds
-Preprocessor visited node count: 598/1000000
+CPU time usage: 0.388 seconds
+Real time usage: 0.857 seconds
+Preprocessor visited node count: 597/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2282,17 +2280,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.284      1 -total
- 35.92%    5.131      1 Template:Userdocnavi/cs
- 15.97%    2.281      2 Template:Docnav
- 14.78%    2.111      1 Template:Navigation_menu_2
- 13.80%    1.971      1 Template:KEY
- 11.67%    1.667      2 Template:FileName
-  9.79%    1.398      1 Template:Version
-  8.34%    1.192      1 Template:TOCright
+100.00%   31.812      1 -total
+ 41.28%   13.133      1 Template:Userdocnavi/cs
+ 15.67%    4.984      1 Template:Version
+ 15.61%    4.965      2 Template:FileName
+ 13.25%    4.216      1 Template:Navigation_menu_2
+ 11.22%    3.570      1 Template:KEY
+  7.93%    2.524      2 Template:Docnav
+  5.63%    1.791      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119225722 and revision id 1741453. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120020125 and revision id 1741457. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
