--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -862,16 +862,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/Siardeni/FreeCADTools">FreeCADTools</a>
 </td>
-<td>Engineering
+<td>Stroj&iacute;renstv&iacute;
 </td>
-<td>It contains tools to create metal profiles, square tubing, z profile, palette, rotation, drawing, and more.
+<td>Obsahuje n&aacute;stroje pro vytv&aacute;&#345;en&iacute; kovov&yacute;ch profil&#367;, &#269;tvercov&yacute;ch trubek, profil&#367; ve tvaru Z, palet, rotace, v&yacute;kres&#367; a dal&scaron;&iacute;.
 </td>
 <td>Siardeni
 </td>
@@ -880,7 +879,6 @@
 <td>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2264,13 +2262,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120020126
+Cached time: 20260120020234
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.388 seconds
-Real time usage: 0.857 seconds
-Preprocessor visited node count: 597/1000000
+CPU time usage: 0.354 seconds
+Real time usage: 0.513 seconds
+Preprocessor visited node count: 596/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2280,17 +2278,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.812      1 -total
- 41.28%   13.133      1 Template:Userdocnavi/cs
- 15.67%    4.984      1 Template:Version
- 15.61%    4.965      2 Template:FileName
- 13.25%    4.216      1 Template:Navigation_menu_2
- 11.22%    3.570      1 Template:KEY
-  7.93%    2.524      2 Template:Docnav
-  5.63%    1.791      1 Template:TOCright
+100.00%   16.856      1 -total
+ 39.34%    6.631      1 Template:Userdocnavi/cs
+ 17.59%    2.965      1 Template:Navigation_menu_2
+ 16.42%    2.768      2 Template:Docnav
+ 11.09%    1.870      1 Template:Version
+  9.91%    1.671      1 Template:KEY
+  9.83%    1.657      2 Template:FileName
+  9.49%    1.599      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120020125 and revision id 1741457. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120020233 and revision id 1741459. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
