--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -1088,16 +1088,15 @@
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=CADExchanger_workbench_icon.svg&amp;filetimestamp=20200209032111&amp;.html" class="mw-file-description"><img src="../File/CADExchanger_workbench_icon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="400" data-file-height="400"></a></span>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/yorikvanhavre/CADExchanger">CADExchanger</a>
 </td>
-<td>Information and data
+<td>Informace a data
 </td>
-<td>It is an extension that allows FreeCAD to import and export file formats supported by the commercial "CAD Exchanger" application, such as Rhino 3dm or ACIS sat, and mesh formats like OBJ and STL.
+<td>Jedn&aacute; se o roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; umo&#382;&#328;uje programu FreeCAD importovat a exportovat form&aacute;ty soubor&#367; podporovan&eacute; komer&#269;n&iacute; aplikac&iacute; &bdquo;CAD Exchanger&ldquo;, jako jsou Rhino 3dm nebo ACIS sat, a form&aacute;ty s&iacute;t&iacute;, jako jsou OBJ a STL.
 </td>
 <td>yorikvanhavre
 </td>
@@ -1106,7 +1105,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2262,13 +2260,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120020234
+Cached time: 20260120020519
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.354 seconds
-Real time usage: 0.513 seconds
-Preprocessor visited node count: 596/1000000
+CPU time usage: 0.479 seconds
+Real time usage: 1.031 seconds
+Preprocessor visited node count: 595/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2278,17 +2276,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.856      1 -total
- 39.34%    6.631      1 Template:Userdocnavi/cs
- 17.59%    2.965      1 Template:Navigation_menu_2
- 16.42%    2.768      2 Template:Docnav
- 11.09%    1.870      1 Template:Version
-  9.91%    1.671      1 Template:KEY
-  9.83%    1.657      2 Template:FileName
-  9.49%    1.599      1 Template:TOCright
+100.00%   19.220      1 -total
+ 40.78%    7.837      1 Template:Userdocnavi/cs
+ 21.58%    4.148      1 Template:Navigation_menu_2
+ 15.87%    3.051      2 Template:Docnav
+ 11.36%    2.183      1 Template:TOCright
+ 10.90%    2.096      2 Template:FileName
+  9.36%    1.799      1 Template:KEY
+  8.52%    1.638      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120020233 and revision id 1741459. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120020518 and revision id 1741461. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
