--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -1352,16 +1352,15 @@
 </td>
 <td>
 
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=BOLTSFC_workbench_icon.svg&amp;filetimestamp=20200209031438&amp;.html" class="mw-file-description"><img src="../File/BOLTSFC_workbench_icon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="128" data-file-height="128"></a></span>
 </td>
 <td><a href="../BOLTSFC_Workbench.html" title="BOLTSFC Workbench">BOLTSFC</a>
 </td>
-<td>Parts
+<td>Sou&#269;&aacute;sti
 </td>
-<td>It is an extension that allows you to use the BOLTS "Open Library for Technical Specifications", which is a collection of objects like nuts, screws, bolts, and so on, parametrically defined.
+<td>Jedn&aacute; se o roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; umo&#382;&#328;uje pou&#382;&iacute;vat BOLTS &bdquo;Open Library for Technical Specifications&ldquo; (Otev&#345;en&aacute; knihovna technick&yacute;ch specifikac&iacute;), co&#382; je sb&iacute;rka parametricky definovan&yacute;ch objekt&#367;, jako jsou matice, &scaron;rouby, svorn&iacute;ky atd.
 </td>
 <td>jreinhardt, berndhahnebach
 </td>
@@ -1370,7 +1369,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2260,13 +2258,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120020519
+Cached time: 20260120020808
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.479 seconds
-Real time usage: 1.031 seconds
-Preprocessor visited node count: 595/1000000
+CPU time usage: 0.410 seconds
+Real time usage: 0.601 seconds
+Preprocessor visited node count: 594/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2276,17 +2274,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.220      1 -total
- 40.78%    7.837      1 Template:Userdocnavi/cs
- 21.58%    4.148      1 Template:Navigation_menu_2
- 15.87%    3.051      2 Template:Docnav
- 11.36%    2.183      1 Template:TOCright
- 10.90%    2.096      2 Template:FileName
-  9.36%    1.799      1 Template:KEY
-  8.52%    1.638      1 Template:Version
+100.00%   18.016      1 -total
+ 43.22%    7.787      1 Template:Userdocnavi/cs
+ 17.85%    3.216      2 Template:Docnav
+ 17.71%    3.191      1 Template:Navigation_menu_2
+ 11.28%    2.032      1 Template:Version
+  7.93%    1.429      1 Template:TOCright
+  7.75%    1.396      1 Template:KEY
+  7.65%    1.378      2 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120020518 and revision id 1741461. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120020808 and revision id 1741463. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
